<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">usolution</string>
    <string name="title_start_activity">StartActivity</string>
    
    <string name="email_hint">Email address</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    
    <string name="incorrect_login_toast">Incorrect email/password</string>
    <string name="new_account_created_toast">Account successfully created</string>
    <string name="account_email_already_registered_toast">Account email already registered</string>
    
    <string name="new_account">New Account</string>
    <string name="new_account_hint">New Account</string>
    
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="linkedin_hint">LinkedIn Profile</string>
    
    <string name="business_name_hint">Company Name</string>
    <string name="business_contact_person_hint">Contact Person</string>
    <string name="business_description_hint">Description</string>
    <string name="business_website_hint">Website</string>
    
    
    <string name="usolution_logo">usolution logo</string>
    <string name="solution_drawable">solution header</string>
    
    <string name="company_logo">Company logo</string>
    <string name="project_title">Project title</string>
    <string name="project_description"></string>
    <string name="company_name">Company name</string>
    
    <string name="project_title_label">Project title</string>
    <string name="project_description_label">Project description</string>
    
    <string name="project_title_test"> Technological infrastructure </string>
    <string name="project_description_test">
        We are dissatisfied with what we are getting out of our current technological setup and are therefore contemplating changing
        platforms. Before we do so, we are extremely interested in having our technological infrastructure analyzed from an outside
        source. Main focus should first and foremost be on improving profitability. In case that this analysis proves that the best/only course of action is to make change, we would appreciate it if the report 
        had recommendation for different it-solutions.
    </string>
    
    <string name="apply_button">Apply</string>
    <string name="application">Application</string>
    
    <string name="business_button">Business</string>
    <string name="student_button">Student</string>
    
    <string name="view_projects_button">View Projects</string>
    <string name="my_projects_button">My Projects</string>
    <string name="view_applicants_button">View Applicants</string>
    
    <string name="viewProjects_button">View Projects</string>
    <string name="viewProfile_button">View Profile</string>
    
    <string name="business_profile">View Business Profile</string>
    
    <string name="new_project">New Project</string>
    <string name="menu_default">Menu</string>
    
</resources>