<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff">
    
    <LinearLayout 
        android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:orientation="vertical" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/usolution_logo"
        android:src="@drawable/usolution"/>
    
    <EditText
        android:id="@+id/account_businessName"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/business_name_hint" />
    
    <EditText
        android:id="@+id/account_businessContactPerson"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/business_contact_person_hint" />
    
	<EditText
        android:id="@+id/account_businessDescription"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/business_description_hint" />
    
    <EditText
        android:id="@+id/account_businessWebsite"
        android:inputType="textUri"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/business_website_hint" />
    
    
    <EditText
        android:id="@+id/account_businessEmail"
        android:inputType="textEmailAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/email_hint" />

    <EditText
        android:id="@+id/account_businessPassword"
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/password_hint" />
        
    <Button
        android:id="@+id/account_newBusinessAccount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/new_account_hint" />
	
	</LinearLayout>
</ScrollView>