<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff">
    
    <ImageView
        android:id="@+id/usolution_logo"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/usolution_logo"
        android:src="@drawable/usolution" />

    <EditText
        android:id="@+id/email_field"
        android:inputType="textEmailAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/email_hint" />
    
    <EditText
        android:id="@+id/password_field"
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/password_hint" />

    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="#ffffffff">
        
	    <Button
	        android:id="@+id/login_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:text="@string/login_button" />
	    
	    <TextView
	        android:id="@+id/new_account"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="100dp"
	        android:textColor="#A9A9A9"
	        android:text="@string/new_account" />
    
	</LinearLayout>
</LinearLayout>