<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff">
    
	<TextView
        android:id="@+id/project_list_item_titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/project_title_label" />
	
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	    <TextView
	        android:id="@+id/project_list_item_businessNameTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="3dp"
	        android:text="@string/company_name" />
	    
	    <ImageView
	        android:id="@+id/project_list_item_businessLogo"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_marginLeft="150dp"
	        android:contentDescription="@string/company_logo"
	        android:src="@drawable/empty" />

    </LinearLayout>
</LinearLayout>