<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical" >

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/project_title_label"
		style="?android:listSeparatorTextViewStyle" />

	<EditText 
	    android:id="@+id/project_titleEditText"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:inputType="none"
		android:focusable="false"
		android:textSize="13sp" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/project_description_label"
		style="?android:listSeparatorTextViewStyle" />

	<EditText 
	    android:id="@+id/project_descriptionEditText"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:inputType="none"
		android:focusable="false"
		android:textSize="13sp" />
	
	<Button 
	    android:id="@+id/project_applyButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:hint="@string/apply_button" />

</LinearLayout>